# rust-rectangles

./: Cargo.toml  README.md
src/: main.rs
